--- a/www/templates/4steps_setup.html
+++ b/www/templates/4steps_setup.html
@@ -32,25 +32,25 @@
                 <div class="list list-inset">
                   <label class="item item-input item-stacked-label">
                     STEP 1 — I FEEL:
-                  <input name="gift" type="text" value="step1" ng-model="steps.step1" />				
+                  <input name="gift" type="text" value="step1" ng-model="user.data.steps.step1" />				
                   </label>
                 </div>
                  <div class="list list-inset">
                   <label class="item item-input item-stacked-label">
                    STEP 2 — NORMALLY I WOULD:
-                  <input name="gift" type="text" value="step2" ng-model="steps.step2" />				
+                  <input name="gift" type="text" value="step2" ng-model="user.data.steps.step2" />				
                   </label>
                 </div>
                  <div class="list list-inset">
                   <label class="item item-input item-stacked-label">
                    STEP 3 — THE TRUTH IS:
-                  <input name="gift" type="text" value="step3" ng-model="steps.step3" />				
+                  <input name="gift" type="text" value="step3" ng-model="user.data.steps.step3" />				
                   </label>
                 </div>
                 <div class="list list-inset">
                   <label class="item item-input item-stacked-label">
                     STEP 4 — WHAT I WILL DO DIFFERENTLY IS:
-                  <input name="gift" type="text" value="step4" ng-model="steps.step3" />				
+                  <input name="gift" type="text" value="step4" ng-model="user.data.steps.step4" />				
                   </label>
                 </div>
             <input type="submit" value="Save these 4 Steps" class="button button-block button-positive" />
