--- a/www/templates/usness_activities.html
+++ b/www/templates/usness_activities.html
@@ -12,151 +12,151 @@
                     <ul class="list">
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['COOKING']" name="activity">
                             </label>
                             COOKING 
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['EATING AT RESTAURANTS']" name="activity">
                             </label>
                             EATING AT RESTAURANTS
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['SOCIALIZING WITH OTHERS']" name="activity">
                             </label>
                             SOCIALIZING WITH OTHERS
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['HAVING MEANINGFUL CONVERSATION']" name="activity">
                             </label>
                             HAVING MEANINGFUL CONVERSATION
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['LAUGHING/JOKING']" name="activity">
                             </label>
                            LAUGHING/JOKING
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['RESTING/RELAXING']" name="activity">
                             </label>
                             RESTING/RELAXING
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['PLAYING SPORTS/GAMES']" name="activity">
                             </label>
                             PLAYING SPORTS/GAMES
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['WATCHING SPORTING EVENTS']" name="activity">
                             </label>
                             WATCHING SPORTING EVENTS
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['EXERCISING']" name="activity">
                             </label>
                             EXERCISING
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['EXPLORING NEW PLACES/THINGS']" name="activity">
                             </label>
                             EXPLORING NEW PLACES/THINGS
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['BEING OUTDOORS']" name="activity">
                             </label>
                             BEING OUTDOORS
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['CREATING/APPRECIATING ART']" name="activity">
                             </label>
-                            CREATING/APPRECIATING ART
+							CREATING/APPRECIATING ART
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['ENJOYING MUSIC/FILM']" name="activity">
                             </label>
                             ENJOYING MUSIC/FILM
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['DREAMING']" name="activity">
                             </label>
                             DREAMING
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['ENJOYING SEX']" name="activity">
                             </label>
                             ENJOYING SEX
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['TRAVELING']" name="activity">
                             </label>
                             TRAVELING
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['PARENTING']" name="activity">
                             </label>
                             PARENTING
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['CARING FOR/ENJOYING A PET']" name="activity">
                             </label>
                             CARING FOR/ENJOYING A PET
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['GETTING TASKS DONE']" name="activity">
                             </label>
                             GETTING TASKS DONE
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['WORKING ON YOUR HOME']" name="activity">
                             </label>
                             WORKING ON YOUR HOME
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['PRAYING']" name="activity">
                             </label>
                             PRAYING
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['HOSTING GATHERINGS']" name="activity">
                             </label>
                             HOSTING GATHERINGS
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['HELPING/SERVING OTHERS']" name="activity">
                             </label>
                             HELPING/SERVING OTHERS
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['LEADING/TEACHING OTHERS']" name="activity">
                             </label>
                             LEADING/TEACHING OTHERS
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                            <input type="checkbox" name="activity">
+                            <input type="checkbox" ng-model="user.data.usness.activities['PARTICIPATING IN FAITH COMMUNITY']" name="activity">
                             </label>
                             PARTICIPATING IN FAITH COMMUNITY
                         </li>
@@ -168,19 +168,19 @@
                         <div class="list list-inset">
                           <label class="item item-input">
                             1 &nbsp;
-						  <input name="activity" type="text" required />				
+						  <input name="activity" type="text" ng-model="user.data.usness.activities_other.other1" />				
                           </label>
                         </div>
                          <div class="list list-inset">
                           <label class="item item-input">
                             2 &nbsp;
-						  <input name="activity" type="text" required />				
+						  <input name="activity" type="text" ng-model="user.data.usness.activities_other.other2" />				
                           </label>
                         </div>
                          <div class="list list-inset">
                           <label class="item item-input">
                             3 &nbsp;
-						  <input name="activity" type="text" required />				
+						  <input name="activity" type="text" ng-model="user.data.usness.activities_other.other3" />				
                           </label>
                         </div>
                     <input type="submit" value="Save and Continue" class="button button-block button-positive" />
