--- a/www/templates/cycles_pain_results.html
+++ b/www/templates/cycles_pain_results.html
@@ -12,9 +12,9 @@
 					<img src="img/top-left-arrow.svg" class="top-left-arrow" width="100%" />
 				</div>
 				<div class="top-middle">
-					<h5>You Feel</h5>###Answer One
-					<br>###Answer Two
-					<br>###Answer Three</div>
+					<h5>You Feel</h5>
+					<span ng-repeat="(pain, val) in user.data.usness.pains" ng-if="val">{{pain}}<br /></span>
+				</div>
 				<div class="top-right">
 					<img src="img/top-right-arrow.svg" class="top-right-arrow" width="100%" />
 				</div>
@@ -24,9 +24,9 @@
 					<br>###Answer Three</div>
 				<div class="middle-middle"></div>
 				<div class="middle-right">
-					<h5>You Cope</h5>###Answer One
-					<br>###Answer Two
-					<br>###Answer Three</div>
+					<h5>You Cope</h5>
+					<span ng-repeat="(cope, val) in user.data.usness.copes" ng-if="val">{{cope}}<br /></span>
+				</div>
 				<div class="bottom-left">
 					<img src="img/bottom-left-arrow.svg" class="bottom-left-arrow" width="100%" />
 				</div>
