--- a/www/templates/cycles_peace_response.html
+++ b/www/templates/cycles_peace_response.html
@@ -8,244 +8,12 @@
         <div class="padding">
             <form name="cyclesPeaceResponseForm" novalidate="" ng-submit="process('menu.tabs.cycles_results',cyclesPeaceResponseForm)">
              <ul class="cyclesCopes list">
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="accepting" value="accepting" ng-model="cycles.results.ccepting">                         
-                        </label>  
-                        Accepting
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="Able to Persist" value="Able to Persist" ng-model="cycles.results.AbleToPersist">                         
-                        </label>                         
-                        Able to Persist
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="Non-Defensive" value="Non-Defensive" ng-model="cycles.results.NonDefensive">                         
-                        </label>                         
-                        Non-Defensive
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="kind" value="Kind" ng-model="cycles.results.Kind">                         
-                        </label>                         
-                        Kind
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="Self-controlled" value="Self-controlled" ng-model="cycles.results.SelfControlled">                         
-                        </label>                         
-                        Self-controlled
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="Settled" value="Settled" ng-model="cycles.results.Settled">                         
-                        </label>                         
-                        Settled
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="Nurturing" value="Nurturing" ng-model="cycles.results.Nurturing">                          
-                        </label>                        
-                        Nurturing
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="Responsible" value="Responsible" ng-model="cycles.results.Responsible">                         
-                        </label>                         
-                        Responsible
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="vulnerable" value="vulnerable" ng-model="cycles.results.vulnerable">                         
-                        </label>                         
-                        Vulnerable
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="gentle" value="gentle" ng-model="cycles.results.gentle">                         
-                        </label>                         
-                        Gentle
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="hopeful" value="hopeful" ng-model="cycles.results.Hopeful">                         
-                        </label>                         
-                        Hopeful
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="Seeking Good" value="Seeking Good" ng-model="cycles.results.SeekingGood">                         
-                        </label>                         
-                        Seeking Good
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="supportive" value="supportive" ng-model="cycles.results.Supportive">                         
-                        </label>                         
-                        Supportive
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="trustworthy" value="trustworthy" ng-model="cycles.results.trustworthy">                         
-                        </label>                         
-                        Trustworthy
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="Communicate Care" value="Caring" ng-model="cycles.results.Caring">                         
-                        </label>                         
-                        Caring
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="Listening" value="Listening" ng-model="cycles.results.listeninge">                         
-                        </label>                         
-                        Listening
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="respectful" value="respectful" ng-model="cycles.results.respectful">                         
-                        </label>                         
-                        Respectful
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="Reliably-connecting " value="ReliablyConnecting" ng-model="cycles.results.ReliablyConnecting">                         
-                        </label>                         
-                        Reliably-connecting 
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="encouraging" value="encouraging" ng-model="cycles.results.encouraging">                         
-                        </label>                        
-                        Encouraging
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="loving" value="loving" ng-model="cycles.results.loving">                         
-                        </label>                         
-                        Loving
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="engaging" value="engaging" ng-model="cycles.results.engaging">                         
-                        </label>                         
-                        Engaging
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="merciful" value="merciful" ng-model="cycles.results.merciful">                         
-                        </label>                         
-                        Merciful
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="open" value="open" ng-model="cycles.results.open">                         
-                        </label>                         
-                        Open
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="honest" value="honest" ng-model="cycles.results.honest">                         
-                        </label>                         
-                        Honest
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="giving" value="giving" ng-model="cycles.results.giving">                         
-                        </label>                        
-                        Giving
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="empathetic" value="empathetic" ng-model="cycles.results.empathetic">                         
-                        </label>                         
-                        Empathetic
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="peaceful" value="peaceful" ng-model="cycles.results.peaceful">                         
-                        </label>                         
-                        Peaceful
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="relaible"  value="relaible" ng-model="cycles.results.relaible">                         
-                        </label>                         
-                        Relaible
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="intimate" value="intimate" ng-model="cycles.results.intimate">                         
-                        </label>                         
-                        Intimate
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="humble" value="humble" ng-model="cycles.results.humble">                         
-                        </label>                         
-                        Humble
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="sober" value="sober" ng-model="cycles.results.sober">                         
-                        </label>                         
-                        Sober
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="inclusive" value="inclusive" ng-model="cycles.results.inclusive">                         
-                        </label>                         
-                        Inclusive
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="relaxed" value="relaxed" ng-model="cycles.results.relaxed">                         
-                        </label>                         
-                        Relaxed
-                    
-                </li>
-                <li class="item item-checkbox">                     
-                    <label class="checkbox">                     
-                        <input type="checkbox" name="positive" value="positive" ng-model="cycles.results.positive">                         
-                        </label>                         
-                        Positive
-                    
-                </li>
-                 
+               <li ng-repeat="action in actionList" class="item item-checkbox">
+					<label class="checkbox">
+						<input type="checkbox" name="pain" value="TEACHING" ng-model="user.data.usness.actions[action]" ng-change="checkActions(user.data.usness.actions[action])" ng-disabled="actionCount>=3 && !user.data.usness.actions[action]">
+					</label>
+					{{action}}
+				</li>
             </ul>
             <div class="tip-text">
                 <h1><img src="img/icon-reflect-small.png" class="cycles-icon" />&nbsp;REFLECT A SEC:</h1>
