--- a/www/templates/cycles_results.html
+++ b/www/templates/cycles_results.html
@@ -10,9 +10,7 @@
                 <div class="top-left"><img src="img/top-left-arrow.svg" class="top-left-arrow" width="100%" /></div>
                 <div class="top-middle">                
                     <h5>Your Truths</h5>
-                    ###Answer One<br>
-                    ###Answer Two<br>
-                    ###Answer Three
+                   <span ng-repeat="(truth, val) in user.data.usness.truths" ng-if="val">{{truth}}<br /></span>
                 </div>
                 <div class="top-right"><img src="img/top-right-arrow.svg" class="top-right-arrow" width="100%" /></div>
                 <div class="middle-left">
@@ -24,9 +22,7 @@
                 <div class="middle-middle"></div>
                 <div class="middle-right">                
                     <h5>Your Actions</h5>
-                    ###Answer One<br>
-                    ###Answer Two<br>
-                    ###Answer Three
+                     <span ng-repeat="(action, val) in user.data.usness.actions" ng-if="val">{{action}}<br /></span>
                 </div>
                 <div class="bottom-left"><img src="img/bottom-left-arrow.svg" class="bottom-left-arrow" width="100%" /></div>
                 <div class="bottom-middle">
