--- a/www/templates/usness_personality.html
+++ b/www/templates/usness_personality.html
@@ -14,20 +14,20 @@
                 <div class="padding">
                     <hr>
                     <h3>Relating to People</h3>
-                    <label><input type="radio" name="personality.relating" value="Extroverted" ng-model="usness.personality.relating">A People-Person, More Extroverted   <br></label>
-                    <label><input type="radio" name="personality.relating" value="Introverted" ng-model="usness.personality.relating">Prefers One-on-One Time, More Introverted <br><br></label>
+                    <label><input type="radio" name="personality.relating" value="Extroverted" ng-model="user.data.usness.personality.relating">A People-Person, More Extroverted   <br></label>
+                    <label><input type="radio" name="personality.relating" value="Introverted" ng-model="user.data.usness.personality.relating">Prefers One-on-One Time, More Introverted <br><br></label>
                     <hr>
                     <h3>HANDLING INFORMATION</h3>
-                    <label><input type="radio" name="personality.learning" value="Clear cut" ng-model="usness.personality.relating">Relying on Common Sense, Facts, History   <br></label>
-                    <label><input type="radio" name="personality.learning" value="Conceptual" ng-model="usness.personality.relating">Relying on Ideas, Theory, Possibilities <br><br></label>
+                    <label><input type="radio" name="personality.learning" value="Clear cut" ng-model="user.data.usness.personality.handling">Relying on Common Sense, Facts, History   <br></label>
+                    <label><input type="radio" name="personality.learning" value="Conceptual" ng-model="user.data.usness.personality.handling">Relying on Ideas, Theory, Possibilities <br><br></label>
                     <hr>
                     <h3>MAKING DECISIONS</h3>
-                    <label><input type="radio" name="personality.decisions" value="Leads with the Brain" ng-model="usness.personality.relating">Rational, Straightforward, Seek Justice, Definitive  <br></label>
-                    <label><input type="radio" name="personality.decisions" value="Leads with the Heart" ng-model="usness.personality.relating">Compassionate, Gentle, Cooperative, Lenient <br><br></label>
+                    <label><input type="radio" name="personality.decisions" value="Leads with the Brain" ng-model="user.data.usness.personality.decisions">Rational, Straightforward, Seek Justice, Definitive  <br></label>
+                    <label><input type="radio" name="personality.decisions" value="Leads with the Heart" ng-model="user.data.usness.personality.decisions">Compassionate, Gentle, Cooperative, Lenient <br><br></label>
                     <hr>
                     <h3>ACCOMPLISHING TASKS</h3>
-                    <label><input type="radio" name="personality.tasks" value="Structured" ng-model="usness.personality.tasks">More Orderly, Intentional, Prepared, Controlled  <br></label>
-                    <label><input type="radio" name="personality.tasks" value="Open" ng-model="usness.personality.tasks">More Flexible, Spontaneous, Easygoing, Adaptable <br><br></label>
+                    <label><input type="radio" name="personality.tasks" value="Structured" ng-model="user.data.usness.personality.tasks">More Orderly, Intentional, Prepared, Controlled  <br></label>
+                    <label><input type="radio" name="personality.tasks" value="Open" ng-model="user.data.usness.personality.tasks">More Flexible, Spontaneous, Easygoing, Adaptable <br><br></label>
                     
                     <label><input type="submit" value="Save and Continue" class="button button-block button-positive" /></label>
 <!--                    <button href="#" class="button button-block button-calm">Compare with Spouse</button>-->
